--- a/.env.example
+++ b/.env.example
@@ -18,11 +18,13 @@ PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
 
+# Logs
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# Database Configuration
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -31,6 +33,7 @@ DB_USERNAME="DB_USER"
 DB_PASSWORD="DB_PASS"
 DB_PREFIX="laravel_"
 
+# Session & Cache
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
@@ -46,11 +49,13 @@ CACHE_STORE=database
 
 MEMCACHED_HOST=127.0.0.1
 
+# Redis (optional)
 REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# Mail Configuration
 MAIL_MAILER=log
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
@@ -60,15 +65,19 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@laravel-starter-kit.test"
 MAIL_FROM_NAME="${APP_NAME}"
 
+# AWS (optional)
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# Development Tools
 IGNITION_EDITOR=sublime
 
-SANDBOX_AUTH_USER=admin
-SANDBOX_AUTH_PASS=admin
+# Basic Authentication
+BASIC_AUTH_USER=admin
+BASIC_AUTH_PASS=admin
 
+SANDBOX_ALLOWED_EMAILS=usrq@example.com,dev1@example.com
 
