--- a/.env.example
+++ b/.env.example
@@ -79,5 +79,14 @@ IGNITION_EDITOR=sublime
 BASIC_AUTH_USER=admin
 BASIC_AUTH_PASS=admin
 
-SANDBOX_ALLOWED_EMAILS=usrq@example.com,dev1@example.com
+# Sandbox Access Control
+SANDBOX_ALLOWED_EMAILS=admin@example.com,dev@example.com
+
+# API Authentication (optional - for ApiAuth middleware)
+# Generate keys: php -r "echo bin2hex(random_bytes(32));"
+# Generate keys: php artisan make:api-key
+API_KEY_1=
+API_KEY_2=
+API_KEY_3=
+
 
