--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@ APP_NAME="Laravel Starter Kit"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=https://laravel-starter-kit.test
-ASSET_URL=https://laravel-starter-kit.test
+APP_URL=http://localhost:8000
+# APP_URL=https://laravel-starter-kit.test
+# ASSET_URL=https://laravel-starter-kit.test
 # ASSET_URL=https://laravel-starter-kit.test/app
 VITE_APP_NAME="${APP_NAME}"
 
@@ -24,14 +25,27 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# Database Configuration
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE="DB_NAME"
-DB_USERNAME="DB_USER"
-DB_PASSWORD="DB_PASS"
-DB_PREFIX="laravel_"
+# SQLite Database (Default - Zero Config Required!)
+# This just works out of the box. Switch to MySQL/PostgreSQL when needed.
+DB_CONNECTION=sqlite
+
+# MySQL Configuration (Uncomment and configure when needed)
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE="DB_NAME"
+# DB_USERNAME="DB_USER"
+# DB_PASSWORD="DB_PASS"
+# DB_PREFIX="laravel_"
+
+# PostgreSQL Configuration (Uncomment and configure when needed)
+# DB_CONNECTION=pgsql
+# DB_HOST=127.0.0.1
+# DB_PORT=5432
+# DB_DATABASE="DB_NAME"
+# DB_USERNAME="DB_USER"
+# DB_PASSWORD="DB_PASS"
+# DB_PREFIX="laravel_"
 
 # Session & Cache
 SESSION_DRIVER=database
@@ -62,7 +76,7 @@ MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@laravel-starter-kit.test"
+MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 # AWS (optional)
