--- a/.env.example
+++ b/.env.example
@@ -103,4 +103,6 @@ API_KEY_1=
 API_KEY_2=
 API_KEY_3=
 
-
+# Queue viewer https://github.com/houdaslassi/vantage
+VANTAGE_AUTH_ENABLED=false
+VANTAGE_ROUTE_PREFIX=sandbox/queue
