--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "houdaslassi/vantage": "^0.1.21",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "opcodesio/log-viewer": "^3.21"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.16",
         "fakerphp/faker": "^1.23",
         "friendsofphp/php-cs-fixer": "^3.92",
         "laravel/breeze": "^2.3",
@@ -23,7 +26,8 @@
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^4.1",
         "pestphp/pest-plugin-laravel": "^4.0",
-        "spatie/laravel-ignition": "^2.9"
+        "spatie/laravel-ignition": "^2.9",
+        "spatie/laravel-web-tinker": "^1.10"
     },
     "autoload": {
         "psr-4": {
