--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,11 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/helpers.php",
+            "app/Helpers/log_helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
