--- a/.env.example
+++ b/.env.example
@@ -96,6 +96,9 @@ BASIC_AUTH_PASS=admin
 # Sandbox Access Control
 SANDBOX_ALLOWED_EMAILS=admin@example.com,dev@example.com
 
+# Toolbox Access Control
+TOOLBOX_ALLOWED_EMAILS=admin@example.com,dev@example.com
+
 # API Authentication (optional - for ApiAuth middleware)
 # Generate keys: php -r "echo bin2hex(random_bytes(32));"
 # Generate keys: php artisan make:api-key
@@ -104,5 +107,7 @@ API_KEY_2=
 API_KEY_3=
 
 # Queue viewer https://github.com/houdaslassi/vantage
+VANTAGE_ROUTES=true
 VANTAGE_AUTH_ENABLED=false
-VANTAGE_ROUTE_PREFIX=sandbox/queue
+VANTAGE_ROUTE_PREFIX=toolbox/queues
+
