--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^4.1",
         "pestphp/pest-plugin-laravel": "^4.0",
-        "spatie/laravel-ignition": "^2.9",
-        "spatie/laravel-web-tinker": "^1.10"
+        "spatie/laravel-ignition": "^2.9"
     },
     "autoload": {
         "psr-4": {
@@ -37,7 +36,8 @@
         },
         "files": [
             "app/helpers.php",
-            "app/Helpers/log_helpers.php"
+            "app/Helpers/log_helpers.php",
+            "app/Helpers/debug_helpers.php"
         ]
     },
     "autoload-dev": {
