--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "houdaslassi/vantage": "^0.1.21",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "opcodesio/log-viewer": "^3.21"
+        "opcodesio/log-viewer": "^3.21",
+        "spatie/laravel-permission": "^6.24"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.16",
