--- a/.env.example
+++ b/.env.example
@@ -36,7 +36,11 @@ DB_CONNECTION=sqlite
 # DB_DATABASE="DB_NAME"
 # DB_USERNAME="DB_USER"
 # DB_PASSWORD="DB_PASS"
-# DB_PREFIX="laravel_"
+DB_TABLE_PREFIX="laravel_"
+
+# WordPress Database
+DB_CONNECTION_WP=wordpress
+DB_TABLE_PREFIX_WP=wp_
 
 # PostgreSQL Configuration (Uncomment and configure when needed)
 # DB_CONNECTION=pgsql
@@ -107,7 +111,6 @@ API_KEY_2=
 API_KEY_3=
 
 # Queue viewer https://github.com/houdaslassi/vantage
-VANTAGE_ROUTES=true
+VANTAGE_ROUTES=false
 VANTAGE_AUTH_ENABLED=false
-VANTAGE_ROUTE_PREFIX=toolbox/queues
 
