--- a/.env.example
+++ b/.env.example
@@ -36,7 +36,7 @@ DB_CONNECTION=sqlite
 # DB_DATABASE="DB_NAME"
 # DB_USERNAME="DB_USER"
 # DB_PASSWORD="DB_PASS"
-DB_TABLE_PREFIX="laravel_"
+# DB_TABLE_PREFIX="laravel_"
 
 # WordPress Database
 DB_CONNECTION_WP=wordpress
