--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,43 @@
+###############################################################################
+# Application
+###############################################################################
+
 APP_NAME="Laravel Starter Kit"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:sKWVkrYgaFojx8H2KR1Jd8EAwdeWo9iQfRsKiAl/0fE=
 APP_DEBUG=true
+
+# Local canonical URL (Valet / .test)
 APP_URL=http://localhost:8000
-# APP_URL=https://laravel-starter-kit.test
-# ASSET_URL=https://laravel-starter-kit.test
-# ASSET_URL=https://laravel-starter-kit.test/app
+# APP_URL=https://dvc-laravel-starter-kit.test
+
+# Public URL when accessed through Cloudflare Tunnel / proxy
+# Recommended: wire config('app.url') to APP_PUBLIC_URL first, then APP_URL fallback.
+# APP_FORWARDING_URL=https://dvc-laravel-starter-kit-test.devraa.com
+
+# override APP_URL when forwarding is needed
+# APP_URL="${APP_FORWARDING_URL}"
+
+# Vite
 VITE_APP_NAME="${APP_NAME}"
 
+# Localization
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
+# Maintenance
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
+# PHP built-in server (if used)
 PHP_CLI_SERVER_WORKERS=4
 
-BCRYPT_ROUNDS=12
+###############################################################################
+# Database
+###############################################################################
 
-# Logs
-LOG_CHANNEL=stack
-LOG_STACK=single
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
-
-# SQLite Database (Default - Zero Config Required!)
-# This just works out of the box. Switch to MySQL/PostgreSQL when needed.
+# SQLite (default - zero config)
 DB_CONNECTION=sqlite
 
 # MySQL Configuration (Uncomment and configure when needed)
@@ -38,11 +49,11 @@ DB_CONNECTION=sqlite
 # DB_PASSWORD="DB_PASS"
 # DB_TABLE_PREFIX="laravel_"
 
-# WordPress Database
+# WordPress DB (if used)
 DB_CONNECTION_WP=wordpress
 DB_TABLE_PREFIX_WP=wp_
 
-# PostgreSQL Configuration (Uncomment and configure when needed)
+# PostgreSQL (optional)
 # DB_CONNECTION=pgsql
 # DB_HOST=127.0.0.1
 # DB_PORT=5432
@@ -51,19 +62,41 @@ DB_TABLE_PREFIX_WP=wp_
 # DB_PASSWORD="DB_PASS"
 # DB_PREFIX="laravel_"
 
-# Session & Cache
+###############################################################################
+# Logging
+###############################################################################
+
+LOG_CHANNEL=stack
+LOG_STACK=single
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=debug
+
+###############################################################################
+# Security / Hashing
+###############################################################################
+
+BCRYPT_ROUNDS=12
+
+###############################################################################
+# Session / Cache / Queue
+###############################################################################
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+# If you want cookies shared across subdomains (e.g. *.devraa.com), set this:
+# SESSION_DOMAIN=.devraa.com
+# Otherwise keep it null for local .test:
+SESSION_DOMAIN=null
 
 CACHE_STORE=database
 # CACHE_PREFIX=
+
+QUEUE_CONNECTION=database
+BROADCAST_CONNECTION=log
+FILESYSTEM_DISK=local
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -73,7 +106,10 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-# Mail Configuration
+###############################################################################
+# Mail
+###############################################################################
+
 MAIL_MAILER=log
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
@@ -83,34 +119,93 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+###############################################################################
 # AWS (optional)
+###############################################################################
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-# Development Tools
+###############################################################################
+# Developer Tools
+###############################################################################
+
 IGNITION_EDITOR=sublime
 
-# Basic Authentication
+###############################################################################
+# Basic Auth (optional)
+###############################################################################
+
 BASIC_AUTH_USER=admin
-BASIC_AUTH_PASS=admin
+BASIC_AUTH_PASS=open123
 
-# Sandbox Access Control
+###############################################################################
+# Access Control (optional)
+###############################################################################
+
 SANDBOX_ALLOWED_EMAILS=admin@example.com,dev@example.com
-
-# Toolbox Access Control
 TOOLBOX_ALLOWED_EMAILS=admin@example.com,dev@example.com
 
-# API Authentication (optional - for ApiAuth middleware)
-# Generate keys: php -r "echo bin2hex(random_bytes(32));"
-# Generate keys: php artisan make:api-key
+###############################################################################
+# API Keys (optional - for ApiAuth middleware)
+###############################################################################
+
+# Generate keys:
+# php -r "echo bin2hex(random_bytes(32));"
+# or: php artisan make:api-key
 API_KEY_1=
 API_KEY_2=
 API_KEY_3=
 
-# Queue viewer https://github.com/houdaslassi/vantage
+###############################################################################
+# Queue Viewer (Vantage) - https://github.com/houdaslassi/vantage
+###############################################################################
+
 VANTAGE_ROUTES=false
 VANTAGE_AUTH_ENABLED=false
 
+###############################################################################
+# Social Login Credentials
+###############################################################################
+
+# Redirect base: choose APP_PUBLIC_URL when proxied, otherwise APP_URL.
+# If you keep things simple, point these to APP_PUBLIC_URL for tunnel testing:
+# GOOGLE_REDIRECT_URI="${APP_PUBLIC_URL}/auth/google/callback"
+
+# Google OAuth
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+GOOGLE_REDIRECT_URI="${APP_URL}/auth/google/callback"
+
+# GitHub OAuth
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_REDIRECT_URI="${APP_URL}/auth/github/callback"
+
+# Facebook OAuth
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+FACEBOOK_REDIRECT_URI="${APP_URL}/auth/facebook/callback"
+
+# Twitter OAuth
+TWITTER_CLIENT_ID=
+TWITTER_CLIENT_SECRET=
+TWITTER_REDIRECT_URI="${APP_URL}/auth/twitter/callback"
+
+# LinkedIn OAuth
+LINKEDIN_CLIENT_ID=
+LINKEDIN_CLIENT_SECRET=
+LINKEDIN_REDIRECT_URI="${APP_URL}/auth/linkedin/callback"
+
+# Microsoft OAuth
+MICROSOFT_CLIENT_ID=
+MICROSOFT_CLIENT_SECRET=
+MICROSOFT_REDIRECT_URI="${APP_URL}/auth/microsoft/callback"
+
+# Apple OAuth
+APPLE_CLIENT_ID=
+APPLE_CLIENT_SECRET=
+APPLE_REDIRECT_URI="${APP_URL}/auth/apple/callback"
