--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,9 @@ APP_URL=http://localhost:8000
 
 # Public URL when accessed through Cloudflare Tunnel / proxy
 # Recommended: wire config('app.url') to APP_PUBLIC_URL first, then APP_URL fallback.
-# APP_FORWARDING_URL=https://dvc-laravel-starter-kit-test.devraa.com
+# APP_FORWARDING_URL="https://dvc-laravel-starter-kit-test.devraa.com"
 
-# override APP_URL when forwarding is needed
+# Override APP_URL when forwarding is needed
 # APP_URL="${APP_FORWARDING_URL}"
 
 # Vite
@@ -72,13 +72,13 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 ###############################################################################
-# Security / Hashing
+# Security & Hashing
 ###############################################################################
 
 BCRYPT_ROUNDS=12
 
 ###############################################################################
-# Session / Cache / Queue
+# Session, Cache & Queue
 ###############################################################################
 
 SESSION_DRIVER=database
@@ -136,76 +136,76 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 IGNITION_EDITOR=sublime
 
 ###############################################################################
-# Basic Auth (optional)
+# Basic Auth
 ###############################################################################
 
 BASIC_AUTH_USER=admin
 BASIC_AUTH_PASS=open123
 
 ###############################################################################
-# Access Control (optional)
+# Access Control
 ###############################################################################
 
 SANDBOX_ALLOWED_EMAILS=admin@example.com,dev@example.com
 TOOLBOX_ALLOWED_EMAILS=admin@example.com,dev@example.com
 
 ###############################################################################
-# API Keys (optional - for ApiAuth middleware)
+# API Authentication
 ###############################################################################
 
 # Generate keys:
 # php -r "echo bin2hex(random_bytes(32));"
-# or: php artisan make:api-key
 API_KEY_1=
 API_KEY_2=
 API_KEY_3=
 
 ###############################################################################
-# Queue Viewer (Vantage) - https://github.com/houdaslassi/vantage
+# Queue Viewer (Vantage)
 ###############################################################################
+# https://github.com/houdaslassi/vantage
 
 VANTAGE_ROUTES=false
 VANTAGE_AUTH_ENABLED=false
 
 ###############################################################################
-# Social Login Credentials
+# Social Authentication
 ###############################################################################
 
-# Redirect base: choose APP_PUBLIC_URL when proxied, otherwise APP_URL.
-# If you keep things simple, point these to APP_PUBLIC_URL for tunnel testing:
-# GOOGLE_REDIRECT_URI="${APP_PUBLIC_URL}/auth/google/callback"
+# Note: Redirect URIs updated to match new /account/auth/{provider}/callback routes
+# Use APP_URL for local .test domain or APP_FORWARDING_URL for tunnel/proxy
+# https://console.cloud.google.com/auth/clients
 
 # Google OAuth
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
-GOOGLE_REDIRECT_URI="${APP_URL}/auth/google/callback"
+GOOGLE_REDIRECT_URI="${APP_URL}/account/auth/google/callback"
 
 # GitHub OAuth
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
-GITHUB_REDIRECT_URI="${APP_URL}/auth/github/callback"
+GITHUB_REDIRECT_URI="${APP_URL}/account/auth/github/callback"
 
 # Facebook OAuth
 FACEBOOK_CLIENT_ID=
 FACEBOOK_CLIENT_SECRET=
-FACEBOOK_REDIRECT_URI="${APP_URL}/auth/facebook/callback"
+FACEBOOK_REDIRECT_URI="${APP_URL}/account/auth/facebook/callback"
 
 # Twitter OAuth
 TWITTER_CLIENT_ID=
 TWITTER_CLIENT_SECRET=
-TWITTER_REDIRECT_URI="${APP_URL}/auth/twitter/callback"
+TWITTER_REDIRECT_URI="${APP_URL}/account/auth/twitter/callback"
 
 # LinkedIn OAuth
 LINKEDIN_CLIENT_ID=
 LINKEDIN_CLIENT_SECRET=
-LINKEDIN_REDIRECT_URI="${APP_URL}/auth/linkedin/callback"
+LINKEDIN_REDIRECT_URI="${APP_URL}/account/auth/linkedin/callback"
 
 # Microsoft OAuth
 MICROSOFT_CLIENT_ID=
 MICROSOFT_CLIENT_SECRET=
-MICROSOFT_REDIRECT_URI="${APP_URL}/auth/microsoft/callback"
+MICROSOFT_REDIRECT_URI="${APP_URL}/account/auth/microsoft/callback"
 
 # Apple OAuth
 APPLE_CLIENT_ID=
 APPLE_CLIENT_SECRET=
-APPLE_REDIRECT_URI="${APP_URL}/auth/apple/callback"
+APPLE_REDIRECT_URI="${APP_URL}/account/auth/apple/callback"
