--- a/.env.example
+++ b/.env.example
@@ -10,13 +10,15 @@ APP_DEBUG=true
 # Local canonical URL (Valet / .test)
 APP_URL=http://localhost:8000
 # APP_URL=https://dvc-laravel-starter-kit.test
+# ASSET_URL=https://dvc-laravel-starter-kit.test/app
 
 # Public URL when accessed through Cloudflare Tunnel / proxy
 # Recommended: wire config('app.url') to APP_PUBLIC_URL first, then APP_URL fallback.
 # APP_FORWARDING_URL="https://dvc-laravel-starter-kit-test.devraa.com"
 
-# Override APP_URL when forwarding is needed
+# Override APP_URL & ASSET_URL when forwarding is needed
 # APP_URL="${APP_FORWARDING_URL}"
+# ASSET_URL="${APP_FORWARDING_URL}/app"
 
 # Vite
 VITE_APP_NAME="${APP_NAME}"
