--- a/.env.example
+++ b/.env.example
@@ -8,13 +8,12 @@ APP_KEY=base64:sKWVkrYgaFojx8H2KR1Jd8EAwdeWo9iQfRsKiAl/0fE=
 APP_DEBUG=true
 
 # Local canonical URL (Valet / .test)
-APP_URL=http://localhost:8000
-# APP_URL=https://dvc-laravel-starter-kit.test
-# ASSET_URL=https://dvc-laravel-starter-kit.test/app
+APP_URL="http://localhost:8000"
+# APP_URL=https://wp-dvc-laravel-starter-kit.test
 
 # Public URL when accessed through Cloudflare Tunnel / proxy
 # Recommended: wire config('app.url') to APP_PUBLIC_URL first, then APP_URL fallback.
-# APP_FORWARDING_URL="https://dvc-laravel-starter-kit-test.devraa.com"
+# APP_FORWARDING_URL="https://wp-dvc-laravel-starter-kit-test.devraa.com"
 
 # Override APP_URL & ASSET_URL when forwarding is needed
 # APP_URL="${APP_FORWARDING_URL}"
