--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ APP_URL="http://localhost:8000"
 # APP_URL="${APP_FORWARDING_URL}"
 # ASSET_URL="${APP_FORWARDING_URL}/app"
 
+APP_URL_PROXIED=false
+
 # Vite
 VITE_APP_NAME="${APP_NAME}"
 
