--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@
 ###############################################################################
 
 APP_NAME="Laravel Starter Kit"
-APP_ENV=local
-APP_KEY=base64:sKWVkrYgaFojx8H2KR1Jd8EAwdeWo9iQfRsKiAl/0fE=
+APP_ENV="local"
+APP_KEY="base64:sKWVkrYgaFojx8H2KR1Jd8EAwdeWo9iQfRsKiAl/0fE="
 APP_DEBUG=true
 
 # Local canonical URL (Valet / .test)
@@ -13,7 +13,7 @@ APP_URL="http://localhost:8000"
 
 # Public URL when accessed through Cloudflare Tunnel / proxy
 # Recommended: wire config('app.url') to APP_PUBLIC_URL first, then APP_URL fallback.
-# APP_FORWARDING_URL="https://wp-dvc-laravel-starter-kit-test.devraa.com"
+# APP_FORWARDING_URL="https://dvc-laravel-starter-kit-test.devraa.com"
 
 # Override APP_URL & ASSET_URL when forwarding is needed
 # APP_URL="${APP_FORWARDING_URL}"
@@ -24,14 +24,24 @@ APP_URL_PROXIED=false
 # Vite
 VITE_APP_NAME="${APP_NAME}"
 
+###############################################################################
 # Localization
+###############################################################################
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
+###############################################################################
 # Maintenance
+###############################################################################
+
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
+
+###############################################################################
+# PHP Runtime
+###############################################################################
 
 # PHP built-in server (if used)
 PHP_CLI_SERVER_WORKERS=4
@@ -41,16 +51,16 @@ PHP_CLI_SERVER_WORKERS=4
 ###############################################################################
 
 # SQLite (default - zero config)
-DB_CONNECTION=sqlite
+# DB_CONNECTION=sqlite
 
-# MySQL Configuration (Uncomment and configure when needed)
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE="DB_NAME"
-# DB_USERNAME="DB_USER"
-# DB_PASSWORD="DB_PASS"
-# DB_TABLE_PREFIX="laravel_"
+# MySQL
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE="MINE_Projects_dvc-laravel-starter-kit_test"
+DB_USERNAME="root"
+DB_PASSWORD=""
+DB_TABLE_PREFIX="laravel_"
 
 # WordPress DB (if used)
 DB_CONNECTION_WP=wordpress
@@ -170,6 +180,24 @@ API_KEY_WEBHOOK_WP_EVENT="keljrODJEvSPOAII3nd5nUgi93OF4eWUx0DfC7sNCiKbgGKCByPgQ8
 
 VANTAGE_ROUTES=false
 VANTAGE_AUTH_ENABLED=false
+
+###############################################################################
+# Pulse
+###############################################################################
+
+PULSE_PATH="toolbox/pulse"
+
+###############################################################################
+# IP Access Control
+###############################################################################
+
+# Strict (exact matches)
+IP_ACCESS_ALLOWED_IPV4=162.197.8.160
+IP_ACCESS_ALLOWED_IPV6=2001:4860:7:110e::d5
+
+# Class / network-based (CIDR recommended)
+IP_ACCESS_ALLOWED_IPV4_CLASS=162.197.8.0/24
+IP_ACCESS_ALLOWED_IPV6_CLASS=2001:4860:7:110e::/64
 
 ###############################################################################
 # Social Authentication
