--- a/.env.example
+++ b/.env.example
@@ -51,16 +51,16 @@ PHP_CLI_SERVER_WORKERS=4
 ###############################################################################
 
 # SQLite (default - zero config)
-# DB_CONNECTION=sqlite
+DB_CONNECTION=sqlite
 
 # MySQL
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE="MINE_Projects_dvc-laravel-starter-kit_test"
-DB_USERNAME="root"
-DB_PASSWORD=""
-DB_TABLE_PREFIX="laravel_"
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE="MINE_Projects_dvc-laravel-starter-kit_test"
+# DB_USERNAME="root"
+# DB_PASSWORD=""
+# DB_TABLE_PREFIX="laravel_"
 
 # WordPress DB (if used)
 DB_CONNECTION_WP=wordpress
@@ -73,7 +73,7 @@ DB_TABLE_PREFIX_WP=wp_
 # DB_DATABASE="DB_NAME"
 # DB_USERNAME="DB_USER"
 # DB_PASSWORD="DB_PASS"
-# DB_PREFIX="laravel_"
+# DB_TABLE_PREFIX="laravel_"
 
 ###############################################################################
 # Logging
