--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 
 APP_NAME="Laravel Starter Kit"
 APP_ENV="local"
-APP_KEY="base64:sKWVkrYgaFojx8H2KR1Jd8EAwdeWo9iQfRsKiAl/0fE="
+APP_KEY=base64:sKWVkrYgaFojx8H2KR1Jd8EAwdeWo9iQfRsKiAl/0fE=
 APP_DEBUG=true
 
 # Local canonical URL (Valet / .test)
