--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ APP_URL="http://localhost:8000"
 
 # Override APP_URL & ASSET_URL when forwarding is needed
 # APP_URL="${APP_FORWARDING_URL}"
-# ASSET_URL="${APP_FORWARDING_URL}/app"
+# ASSET_URL="${APP_URL}/app"
 
 APP_URL_PROXIED=false
 
