--- a/.env.example
+++ b/.env.example
@@ -187,6 +187,14 @@ VANTAGE_AUTH_ENABLED=false
 
 PULSE_PATH="toolbox/pulse"
 
+DEBUGBAR_ENABLED=false
+# Debugbar theme (auto, light, dark)
+DEBUGBAR_THEME=auto
+
+# Spatie Ignition Error Pages
+# Show detailed error pages (should be false in production)
+IGNITION_ENABLED=true
+
 ###############################################################################
 # IP Access Control
 ###############################################################################
