--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-debugbar": "^3.16",
         "houdaslassi/vantage": "^0.1.21",
         "laravel/framework": "^12.0",
         "laravel/pulse": "^1.4",
         "laravel/socialite": "^5.24",
         "laravel/tinker": "^2.10.1",
-        "opcodesio/log-viewer": "^3.21"
+        "opcodesio/log-viewer": "^3.21",
+        "spatie/laravel-ignition": "^2.9"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.16",
         "fakerphp/faker": "^1.23",
         "friendsofphp/php-cs-fixer": "^3.92",
         "laravel/breeze": "^2.3",
@@ -27,8 +28,7 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^4.1",
-        "pestphp/pest-plugin-laravel": "^4.0",
-        "spatie/laravel-ignition": "^2.9"
+        "pestphp/pest-plugin-laravel": "^4.0"
     },
     "autoload": {
         "psr-4": {
