--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,7 @@ APP_DEBUG=true
 # APP_DEBUG_ENABLE_METHOD=ip:class
 # APP_DEBUG_ENABLE_METHOD=ip:strict
 # APP_DEBUG_ENABLE_METHOD=ip:class,auth:admin
+APP_DEBUG_ENABLE_METHOD=ip:strict,auth:admin
 
 ###############################################################################
 # URLs
@@ -210,6 +211,7 @@ VANTAGE_ENABLED=true
 # VANTAGE_ENABLE_METHOD=ip:class
 # VANTAGE_ENABLE_METHOD=ip:strict
 # VANTAGE_ENABLE_METHOD=ip:class,auth:admin
+VANTAGE_ENABLE_METHOD=ip:strict,auth:admin
 
 # Legacy Vantage config (still used by vantage.php config file)
 VANTAGE_ROUTES=false
@@ -229,6 +231,7 @@ PULSE_ENABLED=true
 # PULSE_ENABLE_METHOD=ip:class
 # PULSE_ENABLE_METHOD=ip:strict
 # PULSE_ENABLE_METHOD=ip:class,auth:admin
+PULSE_ENABLE_METHOD=ip:strict,auth:admin
 
 ###############################################################################
 # Debugbar
@@ -242,6 +245,7 @@ DEBUGBAR_ENABLED=true
 # DEBUGBAR_ENABLE_METHOD=ip:class
 # DEBUGBAR_ENABLE_METHOD=ip:strict
 # DEBUGBAR_ENABLE_METHOD=ip:class,auth:admin
+DEBUGBAR_ENABLE_METHOD=ip:strict,auth:admin
 
 # DEBUGBAR_THEME=auto
 
@@ -259,6 +263,7 @@ LOG_VIEWER_ROUTE_PATH="vendor-tools/log-viewer"
 # LOG_VIEWER_ENABLE_METHOD=ip:class
 # LOG_VIEWER_ENABLE_METHOD=ip:strict
 # LOG_VIEWER_ENABLE_METHOD=ip:class,auth:admin
+LOG_VIEWER_ENABLE_METHOD=ip:strict,auth:admin
 
 ###############################################################################
 # Ignition / Error Pages
