--- a/.env.example
+++ b/.env.example
@@ -277,7 +277,8 @@ IGNITION_ENABLED=true
 ###############################################################################
 
 # Strict (exact matches)
-IP_ACCESS_ALLOWED_IPV4=162.197.8.160
+IP_ACCESS_ALLOWED_IPV4=127.0.0.1
+# IP_ACCESS_ALLOWED_IPV4=162.197.8.160
 IP_ACCESS_ALLOWED_IPV6=2001:4860:7:110e::d5
 
 # Class / network-based (CIDR recommended)
