--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "sass-embedded": "^1.93.3",
     "tailwindcss": "^3.1.0",
     "vite": "^7.0.7"
+  },
+  "dependencies": {
+    "daisyui": "^5.5.14"
   }
 }
